# dotfiles

./: .gitconfig  .gitignore  .zprofile  .zshrc  README.md  README.org
.config/: libinput-gestures.conf  starship.toml  switchPower.sh
.config/alacritty/: alacritty.toml
.config/avizo/: config.ini
.config/clipse/: clipboard_history.json  config.json  custom_theme.json
.config/doom/: author.tex  babel-config.el  config.el  custom.el  def.tex  ieee.org  init.el  org-setup.org  packages.el
.config/eww/: eww.css  eww.yuck
.config/fastfetch/: config.jsonc
.config/fish/: config.fish  fish_variables
.config/galendae/: galendae.conf
.config/ghostty/: config  ghostty-colors
.config/gtk-3.0/: bookmarks  colors.css  gtk-dark.css  gtk.css  settings.ini
.config/gtk-4.0/: colors.css  gtk-dark.css  servers
.config/hypr/: before_sleep  colors.conf  hypr.org  hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  monitors.conf  shader.conf  wall.conf
.config/hyprpanel/: config.json  getPower.sh  modules.json  modules.scss  switchPower.sh
.config/kitty/: colors.conf  kitty.conf  kitty.conf.bak
.config/matugen/: config.toml
.config/nvim/: init.lua  lazy-lock.json  vim
.config/pacseek/: colors.json  config.json
.config/qt5ct/: qt5ct.conf
.config/qt6ct/: qt6ct.conf  style-colors.conf
.config/quickshell/music/lyric_daemon/: CMakeLists.txt  README.org  lib.hpp  lyric_daemon.cpp  utils.hpp
.config/rofi/: colors.rasi  config.rasi  matugen-colors.rasi  password.rasi  powermenu.rasi  powermenu.sh  quicklinks.rasi  quicklinks.sh  wifi.rasi  wifi.sh
(+212 files in other folders)
